--- a/contact.html
+++ b/contact.html
@@ -47,98 +47,100 @@
                     </ul>
                 </div>
             </nav>
-            <section class="Banner">
-                <div class="Banner-contact__text-wrapper">
-                    <h1 class="Banner-contact__text-wrapper__heading">
+            <section class="banner-contact">
+                <div class="banner-contact__text-wrapper">
+                    <h1 class="banner-contact__text-wrapper__heading">
                         Be brave, join the journey!
                     </h1>
-                    <p class="Banner-contact__text-wrapper__text">
+                    <p class="banner-contact__text-wrapper__text">
                         Be one of the next heroes in space
                     </p>
                 </div>
             </section>
         </header>
-        <main>
-            <div>
-                <h2>Join us in the mission</h2>
-                <p>
+        <main class="join-in">
+            <div class="join-in__heading-wrapper">
+                <h2 class="join-in__heading-wrapper__head">
+                    Join us in the mission
+                </h2>
+                <p class="join-in__heading-wrapper__text">
                     Be part of the mission. Send us your motivation of why just
                     you should be the next space traveler
                 </p>
             </div>
-            <form action="">
-                <div>
+            <form class="input" action="">
+                <div class="input__box__fistname">
                     <label for="name">
                         First name
                         <br />
                         <input
                             type="text"
                             name="first name"
-                            id="firstname"
+                            class="input__box"
                             required
                         />
                     </label>
                 </div>
                 <br />
-                <div>
+                <div class="input__box__lastname">
                     <label for="name">
                         Last name
                         <br />
                         <input
                             type="text"
                             name="last name"
-                            id="lastname"
+                            class="input__box"
                             required
                         />
                     </label>
                 </div>
                 <br />
-                <div>
+                <div class="input__box__birthdate">
                     <label for="birthdate">
                         Date of Birth
                         <br />
                         <input
                             type="text"
                             name="birthdate"
-                            id="birthdate"
+                            class="input__box"
                             required
                         />
                     </label>
                 </div>
                 <br />
-                <div>
+                <div class="input__box__profession">
                     <label for="profession">
                         Professional
                         <br />
                         <input
                             type="text"
                             name="profession"
-                            id="profession"
+                            class="input__box"
                             required
                         />
                     </label>
                 </div>
                 <br />
-                <div>
+                <div class="input__box__primeskill">
                     <label for="primeskill">
                         Prime skill
                         <br />
                         <input
                             type="text"
                             name="prime skill"
-                            id="primeskill"
+                            class="input__box"
                             required
                         />
                     </label>
                 </div>
                 <br />
-                <div>
+                <div class="input_motivation">
                     <label for="message">
                         Your message
                         <br />
                         <textarea
                             name="Text Message"
-                            id="message"
+                            class="input__motivation__message"
                             cols="40"
                             rows="5"
                         ></textarea>
